#2 : Fix role config.
